@@ -19,10 +19,9 @@
 * This copyright notice MUST APPEAR in all copies of the script.
 *****************************************************************************/
 
-Todoyu::$CONFIG['SYSTEM']['name'] 		= '{$name}';
-Todoyu::$CONFIG['SYSTEM']['email']		= '{$email}';
+Todoyu::$CONFIG['SYSTEM']['name'] 		= '{addslashes $name}';
+Todoyu::$CONFIG['SYSTEM']['email']		= '{addslashes $email}';
 Todoyu::$CONFIG['SYSTEM']['locale']		= '{$locale}';
 Todoyu::$CONFIG['SYSTEM']['timezone']	= '{$timezone}';
 
 Todoyu::$CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
-
